--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -69,3 +69,4 @@
 @import url("gtk-widgets-assets.css");
 @import url("gnome-applications.css");
 @import url("unity.css");
+/*@import url("unity-light.css");*/
