--- a/gtk-3.0/unity-light.css
+++ b/gtk-3.0/unity-light.css
@@ -2,10 +2,10 @@ UnityPanelWidget,
 .unity-panel {
     border-width: 0 0 1px 0;
     border-style: solid;
-    border-color: #2D3338;
-    background-color: #2D3338;
+    border-color: #F5F5F5;
+    background-color: #F5F5F5;
     background-image: none;
-    color: #fff;
+    color: #444;
 }
 
 .unity-panel.menubar,
@@ -15,13 +15,13 @@ UnityPanelWidget,
 .unity-panel.menuitem,
 .unity-panel .menuitem {
     border-width: 0 1px;
-    color: #fff;
+    color: #444;
 }
 
 .unity-panel.menubar.menuitem:hover,
 .unity-panel.menubar .menuitem *:hover {
     border-color: @theme_selected_bg_color;
-    background-color: #394357;
+    background-color: #A1A7B2;
     background-image: none;
     color: #fff;
 }
